--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -131,10 +131,9 @@
         <item>1</item>
         <item>2</item>
     </string-array>
-    <string name="needRestart">
-       Vyžaduje restart aplikace \nVybrané téma: %s
+    <string name="themeSummary">
+        Vybrané téma: %s\nZměny se projeví později
     </string>
-    <string name="pref_theme_summary">Vybrat styl aplikace</string>
     <string name="pref_theme_title">Styl</string>
     <string name="pref_theme_dialog_title">Vyber styl</string>
     <string name="aboutCategory">O aplikaci</string>
@@ -149,4 +148,5 @@
     <string name="editMark">Upravit známku</string>
     <string name="save">Uložit</string>
     <string name="invalidMarkWeight">Známka nebo váha je neplatná</string>
+    <string name="show">Klikněte pro zobrazení</string>
 </resources>
